--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     
-    <h2 class="text-center text-white my-3">Friends are Forever ❤️</h2>
+    <h2 class="text-center text-danger my-3">Friends are Forever ❤️</h2>
 
     <div id="container" class="px-3">
       <!-- components are rendered here -->
